<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_ros</name>
  <version>1.0.0</version>
  <description>The launch_ros ROS package contains example launch files, which will launch all required components for running some of the main ROS SDK functionality</description>
  <maintainer email="industrial.automation@navtechradar.com">Ben Guy</maintainer>
  <license>See License file in repository</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>nav_ros</exec_depend>
  <exec_depend>camera_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
