<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_ros</name>
  <version>1.1.3</version>
  <description>The nav_ros ROS package contains example publishers and subscribers which interface to Navtech Radar</description>
  <maintainer email="industrial.automation@navtechradar.com">Ben Guy</maintainer>
  <license>See License file in repository</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>messages</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
